--- a/index.html
+++ b/index.html
@@ -5,39 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top">
-        <p>Header Logo</p>
-        <ul>
+        <div class="nav">
+            <h3>Header Logo</h3>
+            <ul>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
-        </ul>
-        <h1>This website awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Signup</button>
-        <img src="#" alt="image1">
+            </ul>
+        </div>
+        <div class="topcontent">
+            <div class="webinfo">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Signup</button>
+            </div>
+            <img src="images/pexels-jaime-reimer-2662116.jpg" alt="image1">
+        </div>
     </div>
     <div class="mid1">
         <h2>Some random information</h2>
-        <img src="#" alt="image2">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="#" alt="image2">
-        <p>this is some subtext under an illustration or image</p>
-        <img src="#" alt="image2">
-        <p>this is some subtext under an illustration or image</p>
+        <div class="cards">
+            <div class="card">
+                <img src="images/pexels-daniel-maforte-5544025.jpg" alt="image2">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="images/pexels-daniel-maforte-5544025.jpg" alt="image2">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="images/pexels-daniel-maforte-5544025.jpg" alt="image2">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <img src="images/pexels-daniel-maforte-5544025.jpg" alt="image2">
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
     <div class="mid2">
         <h2>This is an inspiring quote, or testimonial from a customeer. Maybe it's filling up space or maybe people will actualy read it. Who knows? All I know is that it looks nice.</h2>
         <h4>-Thor, God of Thunder</h4>
     </div>
     <div class="mid3">
-        <h4>Call to action! It's time!</h4>
-        <p>Signup for our product by clicking that button right over there!</p>
+        <div class="action">
+            <h4>Call to action! It's time!</h4>
+            <p>Signup for our product by clicking that button right over there!</p>
+            <button>Signup</button>
+        </div>
     </div>
     <div class="footer">
-        Copyright © The odin project 2021
+        <p>Copyright © The odin project 2021</p>
     </div>
 </body>
 </html>
