--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
     </div>
     <div class="mid3">
         <div class="action">
-            <h4>Call to action! It's time!</h4>
-            <p>Signup for our product by clicking that button right over there!</p>
+            <div class="call">
+                <h4>Call to action! It's time!</h4>
+                <p>Signup for our product by clicking that button right over there!</p>
+            </div>
             <button>Signup</button>
         </div>
     </div>
